# AndroidBaseApp

./: .gitignore  README.md  build.gradle  privacy-policy.html  privacy-policy.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/notesrecorder2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  transcoder.cpp
app/src/main/java/com/example/notesrecorder2/: CloudDataBaseManager.java  DatabaseHelper.java  DatabaseManager.java  ListViewAdapter.java  MainActivity.java  RecordsCreateFragment.java  RecordsListElement.java  RecordsListFragment.java  Transcoder.java  ViewPagerAdapter.java
app/src/main/java/com/example/notesrecorder2/data/: LoginDataSource.java  LoginRepository.java  Result.java
app/src/main/java/com/example/notesrecorder2/data/model/: LoggedInUser.java
app/src/main/java/com/example/notesrecorder2/ui/login/: LoggedInUserView.java  LoginActivity.java  LoginFormState.java  LoginResult.java  LoginViewModel.java  LoginViewModelFactory.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_login.xml  activity_main.xml  fragment_records_create.xml  fragment_records_list.xml  popup.xml  record_list_item.xml
app/src/main/res/menu/: popup_menu.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/notesrecorder2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
